# prog_diff

./: .gitignore  4_optim-student.ipynb  README.md  TP1_finite_and_symbolic_differentiation.ipynb  forward_mode_student.ipynb  optimizer_race.py  pyproject.toml  reverse_mode.py  reverse_mode_student.ipynb  surfaces.py  tensor.py  test.py
